--- a/style.css
+++ b/style.css
@@ -19,7 +19,8 @@ body{
 .logo a{
     font-size: 70px;
     float: left;
-    left: 5px;
+    text-align: left;
+    left: 1px;
     font-weight: bold;
     font-family: impact;
     color: rgb(151, 13, 13);
@@ -39,6 +40,9 @@ nav{width: 100%;
     position: -webkit-sticky;
     top: 0;
     background-color: white;
+    z-index: 1;
+    border-bottom: 1px solid black;
+
 }
 nav ul{
     list-style-type: none;
@@ -53,11 +57,11 @@ nav ul li{
 }
 nav ul li a{
     color: black;
-    text-align: center;
+    text-align:center;
     background-color: white;
     border-radius: 10px;
     margin: 5px;
-    padding: 10px 20px 10px 20px;
+    padding: 15px 20px 15px 20px;
     text-decoration: none;
 }
 nav ul li a:hover{
@@ -96,12 +100,14 @@ p{font-size: 15px;
 }
 .tbl-biru:hover{
     background-color: palevioletred;
-    text-decoration: none;
+    text-decoration: underline;
+    color: white;
 
 }
 img{
     width: 500px;
     height: 500px;
+    top: 20px;
 
 }
 h2{
