--- a/style.css
+++ b/style.css
@@ -3,13 +3,15 @@
     margin: 0px;
     padding: 0px;
 }
-
+:root{
+    --bg-utama:#322653;
+    --bg-sec: #8062D6;
+    
+}
 body{
     margin: 0px;
-    width: 100%;
-    height: 300vh;
     padding: 0px;
-    font-family: 'Open Sans',sans-serif;
+       
 }
 .wrapper{
     width: 1100px;
@@ -19,14 +21,14 @@ body{
 .logo a{
     font-size: 70px;
     float: left;
-    text-align: left;
     left: 1px;
+    position: sticky;
     font-weight: bold;
     font-family: impact;
-    color: rgb(151, 13, 13);
+    color: rgb(204, 79, 79);    
 }
 span{
-    color: rgb(47, 24, 70);
+    color: rgb(16, 16, 17);
 }
 .menu{
     float: right;
@@ -35,11 +37,10 @@ span{
 nav{width: 100%;
     margin: auto;
     display: flex;
-    line-height: 100px;
+    line-height: 80px;
     position: sticky;
     position: -webkit-sticky;
     top: 0;
-    background-color: white;
     z-index: 1;
     border-bottom: 1px solid black;
 
@@ -47,8 +48,6 @@ nav{width: 100%;
 nav ul{
     list-style-type: none;
     margin: 0;
-    padding: 0;
-    overflow: hidden;
 }
 nav ul li{
     float: left;
@@ -70,14 +69,16 @@ nav ul li a:hover{
     background-color: black;
 
 }
-section{
+section {
     margin: auto;
     display: flex;
     margin-bottom: 50px;
 }
-.kolom{
+.kolom-bakso{
     margin-bottom: 50px;
+    margin-left: 20vh;
     margin-top: 50px;
+    padding: 20px;
 }
 .kolom .deskripsi{
     font-size: 20px;
@@ -105,7 +106,7 @@ p{font-size: 15px;
 
 }
 img{
-    width: 500px;
+    width: 600px;
     height: 500px;
     top: 20px;
 
@@ -116,3 +117,6 @@ h2{
     font-family: 'Bebas Neue Regular';
 }
 
+.kolom-type{
+    margin-left: 20px;
+}
