--- a/style.css
+++ b/style.css
@@ -37,6 +37,7 @@ span{
 nav{width: 100%;
     margin: auto;
     display: flex;
+    background-color: white;
     line-height: 80px;
     position: sticky;
     position: -webkit-sticky;
