--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@
 body{
     margin: 0px;
     height: 500vh;
-    background-color: var(--bg-sec);
+    background-color:whitesmoke;
     width: 100%;
     padding: 0px;
        
@@ -28,11 +28,11 @@ body{
     position: sticky;
     font-weight: bold;
     font-family: impact;
-    color: rgb(170, 9, 9);   
-    text-shadow: 3px 2px 1px black; 
+    color: rgb(196, 25, 25);   
+    
 }
 span{
-    color: rgb(252, 252, 253);
+    color: rgb(0, 0, 0);
     
 }
 .menu{
@@ -42,7 +42,7 @@ span{
 nav{width: 100%;
     margin: auto;
     display: flex;
-    background-color: rgba(233, 230, 230, 0.836);
+    background-color: rgb(255, 255, 255);
     line-height: 80px;
     position: sticky;
     position: -webkit-sticky;
@@ -62,19 +62,18 @@ nav ul li{
 
 }
 nav ul li a{
-    color: black;
+    color: rgb(5, 5, 5);
     text-align:center;
-    background-color: white;
+    background-color: rgb(196, 25, 25);
     border-radius: 10px;
     margin: 5px;
     padding: 15px 20px 15px 20px;
     text-decoration: none;
 }
 nav ul li a:hover{
-    color: white;
+    color: rgb(255, 255, 255);
     text-decoration: none;
-    background-color: black;
-
+    background-color: rgb(0, 0, 0);
 }
 section {
     margin: auto;
@@ -171,7 +170,7 @@ section #type{
      font-weight: bold;
     }
     .tbl-order:hover{
-        background-color: rgb(236, 52, 52);
+        background-color: rgb(196, 25, 25);
         color: black;
         cursor: pointer;
     }
