--- a/style.css
+++ b/style.css
@@ -144,6 +144,7 @@ section #type{
 .h22{
     text-align: center;
     margin-top: 30px;
+    font-family:'Bebas Neue Regular';
 }
 .baksomnu{
     width: 100%;
