--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
     text-decoration: none;
     margin: 0px;
     padding: 0px;
+    
 }
 :root{
     --bg-utama:#416ce2;
@@ -14,6 +15,7 @@ body{
     background-color:whitesmoke;
     width: 100%;
     padding: 0px;
+    font-family:Arial;
        
 }
 .wrapper{
